Updated the TODO

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 1. Write the types for all functions of ch2/lizt/main.hs
+ - DONE
+
+2. Write the tests for all functions of ch2/lizt/main.hs
 
 ----------------
 Recurring TODOs:
