Added a test script

--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
  - DONE
 
 2. Write the tests for all functions of ch2/lizt/main.hs
+  refer to:
+    - http://hspec.github.io/
 
 ----------------
 Recurring TODOs:
